Fixed Scrollbar Shifting App Components
- FIXED: Whenever the page became scrollable, the scrollbar would appear and take space, causing all other components to be shifted to the left. This should no longer occur.

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
 .App {
   min-height: calc(100vh);
   height: 100%;
+  width: calc(100vw);
   color: white;
   background-color: var(--background-color);
   display: flex;
